first change on site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <img src="http://i.imgur.com/jZPGVth.jpg"/>
 
-    <p> <b> Hi, my name is Felicia and I'm super cool</b> <p>
+    <p> <b> Hi, my name is Felicia </b> <p>
 
        <input type="e-mail", placeholder= "Yo email pls dude";
         <input type=submit>
