Making my site look more serious

--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
   </head>
   <body>
 
-    <h1> Felicia Gutmans, aka babe #1 </h1>
+    <h1> Felicia Gutmans </h1>
 
     <img src="http://i.imgur.com/jZPGVth.jpg"/>
 
     <p> <b> Hi, my name is Felicia </b> <p>
 
-       <input type="e-mail", placeholder= "Yo email pls dude";
+       <input type="e-mail", placeholder= "e-mail address";
         <input type=submit>
               <input type=submit>
 
-    <p> <b> Hey baby babyyyy, yeah yeah yeah </b>
+    <p> <b> Welcome to my website </b>
 <br></br>
 
- <a href="https://www.linkedin.com/in/feliciagutmans" target="_blank"> Check out my linkedin </a>
+ <a href="https://www.linkedin.com/in/feliciagutmans" target="_blank"> Find my linkedin </a>
 </link>
 
   </body>
