--- a/index.html
+++ b/index.html
@@ -2,26 +2,29 @@
 <html>
 
 <head>
-  <title>The life and times of a superstar</title>
+  <title>Felicia Gutmans</title>
     <link rel="stylesheet" href="main.css">
-  </head>
-  <body>
+</head>
 
+<body>
+  <div>
     <h1> Felicia Gutmans </h1>
 
     <img src="http://i.imgur.com/jZPGVth.jpg"/>
 
-    <p> <b> Hi, my name is Felicia </b> <p>
+    <p> <b> An art/tech website that's one of a kind </b> <p>
 
-       <input type="e-mail", placeholder= "e-mail address";
-        <input type=submit>
-              <input type=submit>
-
-    <p> <b> Welcome to my website </b>
+    <p> <b> Website under construction </b>
 <br></br>
 
- <a href="https://www.linkedin.com/in/feliciagutmans" target="_blank"> Find my linkedin </a>
+ <a href="https://www.linkedin.com/in/feliciagutmans" target="_blank"> Find me on linkedin </a>
 </link>
 
-  </body>
-<html>
+
+  <input type="comment", placeholder= "input your comment";
+   <input type=submit>
+         <input type=submit>
+  </div>
+</body>
+
+</html>
