--- a/index.html
+++ b/index.html
@@ -2,29 +2,37 @@
 <html>
 
 <head>
-     <title>Felicia Gutmans</title>
+    <title>Felicia Gutmans</title>
     <link rel="stylesheet" href="main.css">
 </head>
 
 <body>
-  <div class= "content">
-    <h1> Felicia Gutmans </h1>
+  <br>
+  <br>
+  <br>
+
+    <div class= "content">
+    <h1><b>FELICIA GUTMANS</b></h1>
 
     <img src="http://i.imgur.com/jZPGVth.jpg"/>
 
-    <p> <b> An art/tech website that's one of a kind </b> <p>
+    <h2> A Place for Tech and Art</h2>
 
-    <p> <b> Website under construction </b>
-<br></br>
+    <h3> - Website Under Construction - </h3>
+<br>
+<br>
 
  <a href="https://www.linkedin.com/in/feliciagutmans" target="_blank"> Find me on linkedin </a>
  </link>
 
-
-  <input type="comment", placeholder= "input your comment";
+<br>
+<br>
+<!--
+  <input type="comment", placeholder= "Input your comment";
    <input type=submit>
-         <input type=submit>
-  </div>
+       <input type=submit>
+-->
+</div>
 </body>
 
 </html>
